added links and destroy to expenses

--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -20,9 +20,9 @@
         <th>Name</th>
         <th>Type</th>
         <th>From</th>
-        <th>Weekly Income:</th>
-        <th>Weekly tax</th>
-        <th>Weekly Income After Tax</th>
+        <th>Income</th>
+        <th>Tax</th>
+        <th>Income After Tax</th>
         <th></th>
       </tr>
       </thead>
@@ -70,9 +70,9 @@
         <th>Name</th>
         <th>Type</th>
         <th>From</th>
-        <th>Weekly Income:</th>
-        <th>Weekly tax</th>
-        <th>Weekly Income After Tax</th>
+        <th>Income</th>
+        <th>Tax</th>
+        <th>Income After Tax</th>
         <th></th>
       </tr>
       </thead>
@@ -119,9 +119,9 @@
         <th>Name</th>
         <th>Type</th>
         <th>From</th>
-        <th>Monthly Income</th>
-        <th>Monthly Tax</th>
-        <th>Monthly Income After Tax</th>
+        <th>Income</th>
+        <th>Tax</th>
+        <th>Income After Tax</th>
         <th></th>
       </tr>
       </thead>
@@ -168,10 +168,9 @@
         <th>Name</th>
         <th>Type</th>
         <th>From</th>
-        <th>Annual Income</th>
-        <th>Superannuation</th>
-        <th>Annual Tax</th>
-        <th>Annual After Tax Income</th>
+        <th>Income</th>
+        <th>Tax</th>
+        <th>Income After Tax</th>
         <th></th>
       </tr>
       </thead>
