--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="flex-container">
-  <h1>BillyCard</h1>
+  <h1><i class="material-icons">credit_card</i>BillyCard</h1>
   <p>Drive Down your Credit Card debit!</p>
 </div>
 
