--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -19,14 +19,19 @@
       <tr>
         <th>Name</th>
         <th>Amount</th>
+        <th></th>
       </tr>
       </thead>
 
       <tbody>
       <% @expenses.each do |expense| %>
         <tr>
-          <td><%= expense.name %></td>
+          <td><%= link_to expense.name, edit_expense_path(expense) %></td>
           <td><%= number_to_currency(expense.weekly_expense, unit: "$") %></td>
+          <td><%= link_to expense, method: :delete, data: {confirm: 'Are you sure?'} do %>
+              <i class="material-icons">delete_forever</i>
+            <% end %>
+          </td>
         </tr>
       <% end %>
       <tr>
