--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -169,6 +169,7 @@
         <th>Type</th>
         <th>From</th>
         <th>Income</th>
+        <th>Super</th>
         <th>Tax</th>
         <th>Income After Tax</th>
         <th></th>
