fixed issue on expense page

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -148,7 +148,7 @@
 </div>
   <% else %>
     You have no Expenses, better
-    <%= link_to new_expenses_path, class: 'mdl-button mdl-js-button mdl-button--fab mdl-button--colored' do %>
+    <%= link_to new_expense_path, class: 'mdl-button mdl-js-button mdl-button--fab mdl-button--colored' do %>
       <i class="material-icons">add</i>
     <% end %>
     one.
