begen clean of of dashboard

--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :repayments %>
-    <%= form.number_field :repayments, id: :loan_repayments %>
+    <%= form.label :repayment %>
+    <%= form.number_field :repayment, id: :loan_repayment %>
   </div>
 
   <div class="field">
