--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -38,6 +38,12 @@
       <span class="spin"></span>
     </div>
 
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <%= f.label :dueDate, class: 'mdl-textfield__label' %>
+    <%= f.date_select :dueDate, class: 'mdl-textfield__input' %>
+    <span class="spin"></span>
+  </div>
+
   <div class="button login">
     <div class="actions">
       <%= f.submit class: 'mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent' %>
