--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -54,6 +54,7 @@
       <tr>
         <td></td>
         <td><%= number_to_currency(@total_weekly_expenses, unit: "$") %></td>
+        <td></td>
       </tr>
       </tfoot>
     </table>
@@ -71,29 +72,42 @@
       <tr>
         <th>Name</th>
         <th>Amount</th>
+        <th></th>
       </tr>
       </thead>
 
       <tbody>
       <% @expenses.each do |expense| %>
         <tr>
-          <td><%= expense.name %></td>
+          <td><%= link_to expense.name, edit_expense_path(expense) %></td>
           <td><%= number_to_currency(expense.monthly_expense, unit: "$") %></td>
+          <td><%= link_to expense, method: :delete, data: {confirm: 'Are you sure?'} do %>
+              <i class="material-icons">delete_forever</i>
+            <% end %>
+          </td>
         </tr>
       <% end %>
       <tr>
-        <td> Credit Card Payments</td>
-        <td><%= number_to_currency(@total_monthly_payment, unit: "$") %></td>
+        <td> <%= link_to 'Loan Repayments', loans_path %></td>
+        <td><%= number_to_currency(@weekly_cc, unit: "$") %></td>
+        <td></td>
       </tr>
       <tr>
-        <td> Subscription Payments</td>
+        <td><%= link_to 'Card Payments', credit_cards_path %></td>
+        <td><%= number_to_currency(@total_monthly_payment, unit: "$") %></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Subscription Payments', subs_path %></td>
         <td><%= number_to_currency(@monthly_subs, unit: "$") %></td>
+        <td></td>
       </tr>
       </tbody>
       <tfoot>
       <tr>
         <td></td>
         <td><%= number_to_currency(@total_monthly_expense, unit: "$") %></td>
+        <td></td>
       </tr>
       </tfoot>
     </table>
@@ -113,29 +127,42 @@
       <tr>
         <th>Name</th>
         <th>Amount</th>
+        <th></th>
       </tr>
       </thead>
 
       <tbody>
       <% @expenses.each do |expense| %>
         <tr>
-          <td><%= expense.name %></td>
+          <td><%= link_to expense.name, edit_expense_path(expense) %></td>
           <td><%= number_to_currency(expense.annual_expense, unit: "$") %></td>
+          <td><%= link_to expense, method: :delete, data: {confirm: 'Are you sure?'} do %>
+              <i class="material-icons">delete_forever</i>
+            <% end %>
+          </td>
         </tr>
       <% end %>
       <tr>
-        <td> Credit Card Payments</td>
-        <td><%= number_to_currency(@annual_cc, unit: "$") %></td>
+        <td> <%= link_to 'Loan Repayments', loans_path %></td>
+        <td><%= number_to_currency(@weekly_cc, unit: "$") %></td>
+        <td></td>
       </tr>
       <tr>
-        <td> Subscription Payments</td>
+        <td><%= link_to 'Card Payments', credit_cards_path %></td>
+        <td><%= number_to_currency(@annual_cc, unit: "$") %></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Subscription Payments', subs_path %></td>
         <td><%= number_to_currency(@annual_subs, unit: "$") %></td>
+        <td></td>
       </tr>
       </tbody>
       <tfoot>
       <tr>
         <td></td>
         <td><%= number_to_currency(@total_annual_expenses, unit: "$") %></td>
+        <td></td>
       </tr>
       </tfoot>
     </table>
