--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,21 @@
 <div class="flex-container">
-  <h1><i class="material-icons">credit_card</i>BillyCard</h1>
-  <p>Drive Down your Credit Card debit!</p>
+  <h1><i class="material-icons md-48">credit_card</i>BillyCard</h1>
+  <h3>Drive Down your debit!</h3>
+  <p>BillyCar.com with allow you to better understand all facets of your finances, without the mumbo jumbo.
+    Simply input or import your income, expenses, loans, credit cards and subscriptions. We will then analyse your data
+    and show you ways to pay down your debt faster.</p>
 </div>
+<div class="flex-container">
+  <h3>Manage Your Income!</h3>
+</div>
+<div class="flex-container">
+  <h3>Control Your Expenses!</h3>
+</div>
+<div class="flex-container">
+  <h3>Tame your Credit Cards!</h3>
+</div>
+<div class="flex-container">
+  <h3>Suppress Your Subscriptions!</h3>
+</div>
+
 
