--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="flex-container">
   <h1><i class="material-icons md-48">credit_card</i>BillyCard</h1>
   <h3>Drive Down your debit!</h3>
-  <p>BillyCar.com with allow you to better understand all facets of your finances, without the mumbo jumbo.
+  <p>BillyCard.com with allow you to better understand all facets of your finances, without the mumbo jumbo.
     Simply input or import your income, expenses, loans, credit cards and subscriptions. We will then analyse your data
     and show you ways to pay down your debt faster.</p>
 </div>
